# orbbec_foxglove

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_ninja_linux.sh  build_ninja_msvc.cmd  setup_windows.ps1
config/: camera_config.ini
include/: async_frame_consumer.hpp  foxglove_publisher.hpp  frame_dispatcher.hpp  orbbec_producer.hpp
scripts/: calibrate_imu_allan.py  plot_imu_dt.py  plot_preintegration_drift.py  run_live_preintegration_mc.py  run_replay_window_mc.py  tune_preintegration_covariance.py
src/: foxglove_publisher.cpp  imu_dt_logger.cpp  imu_preintegration_drift_test.cpp  main.cpp  orbbec_producer.cpp  producer_main.cpp  vi_dataset_logger.cpp
